--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=jdbc:h2:~/test;AUTO_SERVER=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
